# retrieval-quality-toolkit

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/retrieval_quality_toolkit/: __init__.py  cli.py  core.py
tests/: test_core.py
